--- a/src/index.css
+++ b/src/index.css
@@ -3,4 +3,5 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
